# midimech

./: .gitignore  midimech.py  pyproject.toml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/licenses/: TinySoundFont-LICENSE.txt
android/app/src/main/cpp/: CMakeLists.txt  tsf_jni.cpp
android/app/src/main/java/org/midimech/app/: GeneralMidiInstruments.kt  LaunchpadReceiver.kt  MainActivity.kt  MidiByteStreamParser.kt  MidimechVirtualMidiService.kt  Synth.kt  TsfEngine.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: midi_device_info.xml
src/: constants.py  core.py  io_interfaces.py  launchpad.py  settings.py  settings_loader.py  util.py  vecshim.py
src/backends/: android.py  desktop.py
src/frontends/: pygame_frontend.py
