[project]
name = "midimech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "musicpy>=7.12",
    "pyglm>=2.8.3",
    "pyyaml>=6.0.3",
    "webcolors>=25.10.0",
]

[project.optional-dependencies]
desktop = [
    "launchpad-py>=0.9.1",
    "pygame-ce>=2.5.7",
    "pygame-gui>=0.6.14",
    "rtmidi2>=1.4.1",
]
